@@ -52,7 +52,7 @@
 <P>unsigned int  <STRONG>ListColorInfo</STRONG>( 
 <FONT SIZE=-1>FILE</FONT> *file, ExceptionInfo *exception );</P>
 <P>unsigned int  <STRONG>QueryColorDatabase</STRONG>( const char *name, PixelPacket *color, ExceptionInfo *exception );</P>
-<P>unsigned int  <STRONG>QueryColorname</STRONG>( const Image *image, const PixelPacket *color, ComplianceType compliance, char *name, ExceptionInfo *exception );</P>
+<P>unsigned int  <STRONG>QueryColorname</STRONG>( const Image *image, const PixelPacket *color, unsigned long compliance, char *name, ExceptionInfo *exception );</P>
 <P>
 <HR>
 <H1><A NAME="function descriptions">
@@ -202,7 +202,7 @@ Return any errors or warnings in this structure.
 <P>
 <H2><A NAME="querycolorname">QueryColorname</A></H2>
 <blockquote>QueryColorname() returns a named color for the given color intensity. If an exact match is not found, a hex value is return instead. For example an intensity of rgb: ( 0, 0, 0 ) returns black whereas rgb: ( 223, 223, 223 ) returns #dfdfdf. </blockquote><P>The format of the QueryColorname method is:</P>
-<blockquote>unsigned int QueryColorname ( const <A HREF="types/Image.html">Image</A> *image, const <A HREF="types/PixelPacket.html">PixelPacket</A> *color, ComplianceType compliance, char *name, <A HREF="types/ExceptionInfo.html">ExceptionInfo</A> *exception ); </blockquote><P>
+<blockquote>unsigned int QueryColorname ( const <A HREF="types/Image.html">Image</A> *image, const <A HREF="types/PixelPacket.html">PixelPacket</A> *color, unsigned long compliance, char *name, <A HREF="types/ExceptionInfo.html">ExceptionInfo</A> *exception ); </blockquote><P>
 <FONT SIZE=-1>A</FONT> description of each parameter follows.</P>
 <DL><DT><DD><DL>
 <dd><p></p><dt><STRONG>image:</STRONG><BR>
@@ -216,8 +216,9 @@ The color intensities.
 <dd><p></p><dt><STRONG><A NAME="item_o_Compliance%3A">Compliance:</A></STRONG><BR>
 <DD>
 Adhere to this color standard: 
-<FONT SIZE=-1>SVG</FONT> or 
-<FONT SIZE=-1>X11.</FONT>
+<FONT SIZE=-1>SVG,</FONT> 
+<FONT SIZE=-1>X11,</FONT> or 
+<FONT SIZE=-1>XPM.</FONT>
 <P></P>
 <dd><p></p><dt><STRONG>name:</STRONG><BR>
 <DD>
