@@ -1,6 +1,7 @@
 2002-07-04  Cristy  <cristy@mystic.es.dupont.com>
   * Typos corrected in perl.html (thanks to Ron Savage);
   * A color profile is now correctly referred to as ICM instead of IPTC.
+  * Added XPM color compliance to colors.mgk.
   * $image->Get('clip-mask') now returns the clipping image.
 
 2002-07-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
